src/test/deca/context/valid/objet/assign-sous-class.deca
// Description:
//    déclare une nouvelle variable avec une class mere
//
// Resultats:
//    //
//
// Historique:
//    cree le 16/01/2023

class A {
}

class B extends A {
}

{
    A a = new B();
}
