src/test/deca/context/invalid/override-method-wrong-type-2.deca
// Description:
//    override de méthode avec un type de retour différent et non compatible (avec des objets de classes)
//
// Resultats:
//    Ligne 17: The return type is not the same as defined in the superclass (or not a subtype) (rule 2.7)
//
// Historique:
//    cree le 16/01/2023

class A {
    A get(){}
}

class B {}

class C extends A {
    B get(){}
}